openbsdcompat_srcs = files(
    'arc4random.c',
    'base64.c',
    'basename.c',
    'bcrypt_pbkdf.c',
    'bindresvport.c',
    'blowfish.c',
    'bsd-asprintf.c',
    'bsd-closefrom.c',
    'bsd-cygwin_util.c',
    'bsd-getline.c',
    'bsd-getpagesize.c',
    'bsd-getpeereid.c',
    'bsd-misc.c',
    'bsd-nextstep.c',
    'bsd-openpty.c',
    'bsd-poll.c',
    'bsd-setres_id.c',
    'bsd-snprintf.c',
    'bsd-statvfs.c',
    'bsd-waitpid.c',
    'daemon.c',
    'dirname.c',
    'explicit_bzero.c',
    'fake-rfc2553.c',
    'fmt_scaled.c',
    'getcwd.c',
    'getgrouplist.c',
    'getopt_long.c',
    'getrrsetbyname-ldns.c',
    'inet_aton.c',
    'inet_ntoa.c',
    'inet_ntop.c',
    'kludge-fd_set.c',
    'libressl-api-compat.c',
    'md5.c',
    'memmem.c',
    'mktemp.c',
    'openssl-compat.c',
    'port-irix.c',
    'port-linux.c',
    'port-solaris.c',
    'port-net.c',
    'port-uw.c',
    'readpassphrase.c',
    'reallocarray.c',
    'recallocarray.c',
    'rresvport.c',
    'setenv.c',
    'setproctitle.c',
    'sha1.c',
    'sha2.c',
    'strlcat.c',
    'strlcpy.c',
    'strmode.c',
    'strptime.c',
    'strsep.c',
    'strtoll.c',
    'strtonum.c',
    'strtoul.c',
    'strtoull.c',
    'timingsafe_bcmp.c',
    'vis.c',
    'xcrypt.c',
    'glob.c',
    'strcasestr.c',
    'strndup.c',
    'bsd-pselect.c',
    # missing source files in the solution
    'arc4random_uniform.c',
    'bsd-getentropy.c',
    'bsd-timegm.c',
    # missing functions pulled from libssh body to prevent a dependency cycle
    'nonblock.c',
)