win32iocompat_srcs = files(
    'w32fd.c',
    'signal.c',
    'socketio.c',
    'fileio.c',
    'termio.c',
    'misc.c',
    'signal_sigalrm.c',
    'signal_sigchld.c',
    'w32api_proxies.c',
    'win32_usertoken_utils.c',
    'w32log.c',
    'pwd.c',
    'win32_dirent.c',
    'no-ops.c',
    'ansiprsr.c',
    'console.c',
    'tncon.c',
    'tnnet.c',
    'utf.c',
    'spawn.c',
    'spawn-ext.c', # "extern"ing vars defined in win32_usertoken_utils.c
    'signal_wait.c',
    'win32_pty.c',
    'gss-sspi.c',
    # ad hoc; the other one missing is ttymodes_windows.c
    'w32-sshfileperm.c',
    # provide logging function defs for the compat layer
    'stderrlog.c',
)
